--- a/src/main/resources/settings.fxml
+++ b/src/main/resources/settings.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10.0" prefHeight="400.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
+<GridPane alignment="center" hgap="10.0" prefHeight="400.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
 <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
-    <Text text="Settings" wrappingWidth="102.6578369140625" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
+    <Text text="Settings" wrappingWidth="131.6578369140625" GridPane.columnIndex="2" GridPane.columnSpan="2">
         <font>
             <Font name="Calibri Light" size="30.0" />
         </font></Text>
