--- a/src/main/resources/startgame.fxml
+++ b/src/main/resources/startgame.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
+<GridPane alignment="center" hgap="30" prefHeight="407.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
     <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
@@ -39,7 +39,7 @@
          <Font size="35.0" />
       </font>
    </Button>
-   <Button fx:id="exit" mnemonicParsing="false" onAction="#exitGame" prefHeight="25.0" prefWidth="71.0" text="Exit game" GridPane.columnIndex="3" GridPane.rowIndex="12">
+   <Button mnemonicParsing="false" onAction="#exitGame" prefHeight="25.0" prefWidth="71.0" text="Exit game" GridPane.columnIndex="3" GridPane.rowIndex="12">
       <GridPane.margin>
          <Insets left="44.0" />
       </GridPane.margin>
