--- a/src/main/resources/game1.fxml
+++ b/src/main/resources/game1.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.gameController">
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
@@ -88,32 +87,27 @@
                 </GridPane>
                 <GridPane GridPane.columnIndex="1">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.33329772949219" minWidth="10.0" prefWidth="25.666688919067383" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.99999713897705" minWidth="10.0" prefWidth="164.33331108093262" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.33329772949219" minWidth="10.0" prefWidth="33.99999809265137" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.99999713897705" minWidth="10.0" prefWidth="156.6666685740153" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints maxHeight="46.333343505859375" minHeight="10.0" prefHeight="44.333343505859375" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="75.66665649414062" minHeight="10.0" prefHeight="68.66665649414062" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="75.33334223429361" minHeight="10.0" prefHeight="56.666666666666664" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="75.66665649414062" minHeight="10.0" prefHeight="60.66666666666668" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="39.33332824707031" minHeight="10.0" prefHeight="13.333343505859375" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button id="goback" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="25.0" prefWidth="99.0" text="back to menue" GridPane.columnIndex="1">
+                        <Button id="goback" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="25.0" prefWidth="99.0" text="Back to menue" GridPane.columnIndex="1">
                             <GridPane.margin>
-                                <Insets left="8.0" />
+                                <Insets />
                             </GridPane.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" prefHeight="39.0" prefWidth="116.0" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <font>
-                        <Font size="19.0" />
-                     </font>
-                  </Button>
+                  <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" prefHeight="25.0" prefWidth="99.0" text="Reset game" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     </children>
                 </GridPane>
-                  <Label fx:id="counter" disable="true" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.6667022705078" minWidth="10.0" prefWidth="145.6667022705078" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.99996948242188" minWidth="10.0" prefWidth="44.33329772949219" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="89.66668701171875" minWidth="10.0" prefWidth="11.666682243347168" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.33331775665283" minWidth="10.0" prefWidth="178.33331775665283" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -121,11 +115,22 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                        <Button id="Back" mnemonicParsing="false" onAction="#backPressed" prefHeight="25.0" prefWidth="42.0" text="Back">
-                            <GridPane.margin>
-                                <Insets left="64.0" />
-                            </GridPane.margin>
-                        </Button>
+                        <Label fx:id="counter" disable="true" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <GridPane GridPane.columnIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="84.33331298828125" minWidth="10.0" prefWidth="51.33331298828125" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.33337783813477" minWidth="10.0" prefWidth="127.33335367838544" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                              <Button id="Back" mnemonicParsing="false" onAction="#backPressed" prefHeight="25.0" prefWidth="42.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
             </children>
