--- a/src/main/resources/game2.fxml
+++ b/src/main/resources/game2.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.gameController">
    <stylesheets> <String fx:value="styles.css" /> </stylesheets>
@@ -87,8 +88,32 @@
             </GridPane>
             <GridPane GridPane.columnIndex="1">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.33329772949219" minWidth="10.0" prefWidth="43.99997584025065" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.66667048136392" minWidth="10.0" prefWidth="147.33335749308267" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.33329772949219" minWidth="10.0" prefWidth="25.666688919067383" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.99999713897705" minWidth="10.0" prefWidth="164.33331108093262" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="46.333343505859375" minHeight="10.0" prefHeight="44.333343505859375" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="75.66665649414062" minHeight="10.0" prefHeight="68.66665649414062" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="39.33332824707031" minHeight="10.0" prefHeight="13.333343505859375" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button id="goback" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="25.0" prefWidth="99.0" text="back to menue" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" prefHeight="39.0" prefWidth="116.0" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+            <Label fx:id="counter" disable="true" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.6667022705078" minWidth="10.0" prefWidth="145.6667022705078" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.99996948242188" minWidth="10.0" prefWidth="44.33329772949219" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -96,19 +121,13 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button id="goback" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="25.0" prefWidth="115.0" text="Go back to menue" GridPane.columnIndex="1">
+                  <Button id="Back" mnemonicParsing="false" onAction="#backPressed" prefHeight="25.0" prefWidth="42.0" text="Back">
                      <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin></Button>
-                  <Button id="Back" mnemonicParsing="false" onAction="#backPressed" prefHeight="25.0" prefWidth="49.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets left="65.0" />
+                        <Insets left="64.0" />
                      </GridPane.margin>
                   </Button>
-                  <Label disable="true" fx:id="counter" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </right>
